--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -8,3 +8,21 @@ body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
 }
+
+section{
+  display: flex;
+}
+
+#se1{
+  display: flex;
+}
+
+.topsec2{
+  display: flex;
+}
+
+.bottomsec2{
+  background: url("starter-code/images/frame.png") 0 0 no-repeat; 
+  background-size: cover;
+  background-position: center;
+}
