--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -35,7 +35,23 @@ body {
 
  #center{
   display: flex;
-  align-items: flex-end;
+  align-items: center;
+  
+ }
+  
+ h1{
+   color: #06365f;
+   
+ }
 
+h4{
+  color: grey;
+  font-size: smaller;
+}
+ 
 
+  a{
+  font-weight: bold; 
+   text-decoration: none;
+   color: #1c5380;
  }
