--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -4,7 +4,197 @@ dark blue: #06365f
 light blue: #1c5380
 */
 
-body {
+
+*, *:before, *:after {
+  -moz-box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+}
+
+html, body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  padding: 0;
+  height: 100vh;
 }
+
+/* ----------------------------------- */
+
+h1, h2, h3, h4, h5, h6, p { margin: 0; }
+
+/* ----------------------------------- */
+
+.bkg-dark-blue { background-color: #06365f; }
+.bkg-light-blue { background-color: #1c5380; }
+.bkg-white { background-color: #ffffff; }
+.txt-dark-blue { color: #06365f; }
+.txt-light-blue { color: #1c5380; }
+.txt-white { color: #ffffff; }
+o
+/* ----------------------------------- */
+
+.h-100vh { height: 100vh; min-height: 100vh; max-height: 100vh; }
+.h-100pc { height: 100%; min-height: 100%; max-height: 100%; }
+.h-50pc { height: 50%; min-height: 50%; max-height: 50%; }
+.h-25pc { height: 25%; min-height: 25%; max-height: 25%; }
+
+.pad-lr-25 { padding-left: 25px; padding-right: 25px; }
+
+.w-100pc { width: 100%; min-width: 100%; max-width: 100%; }
+.w-500px { width: 500px; }
+
+.overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
+/* ----------------------------------- */
+
+#sf-background {
+  height: 40vh; 
+  min-height: 40vh; 
+  max-height: 40vh;
+  width: 100vw;
+
+  background-image: url("../images/bgtile.png");
+  background-repeat: repeat;
+  background-position: left top;
+}
+
+#sf-container {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100vw;
+}
+
+#nav-bar {
+  margin-top: 30px;
+}
+
+#nav-bar a {
+  text-decoration: none;
+  margin: 0 5px;
+  color: #4c87b8;
+  text-transform: uppercase;
+  font-size: 0.85rem;
+  font-weight: 700;
+}
+
+#nav-bar span {
+  margin: 0 5px;
+  color: grey;
+  text-transform: uppercase;
+  font-size: 0.85rem;
+  font-weight: 700;
+}
+
+/* ----------------------------------- */
+
+.flex-center {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.flex-row-c-c {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
+
+.flex-row-sb-c {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.flex-row-c-t {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: flex-start;
+}
+
+.flex-row-c-s {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: stretch;
+}
+
+.flex-column-t {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+}
+
+.flex-column-t-c {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+}
+
+.flex-ac-str {
+  align-content: stretch;
+}
+
+/* ----------------------------------- */
+
+.push-button {
+  background-image: linear-gradient(#6891B2,#3F719A);
+  border-radius: 4px;
+  border-width: 2px;
+  border-color: #1c53808a;
+  border-style: ridge;
+  padding: 10px 10px;
+  color: white;
+  font-weight: bold;
+  text-decoration: none;
+}
+
+#info-column-brand {
+  padding: 10px 8px 0px 3px;
+}
+
+#info-column-text {
+  position: relative; flex-grow: 1;
+}
+
+#info-column-text h2 {
+  margin-bottom: 30px;
+}
+
+#info-column-text p {
+  margin: 10px 0;
+  font-size: 1.0rem;
+}
+
+#info-column-buttons {
+  margin: 0 33px
+}
+
+#info-column-buttons a {
+  text-decoration: none;
+}
+
+#info-column-buttons img {
+  margin-right: 15px;
+}
+
+/* ----------------------------------- */
+
+.box { width: 250px; height: 250px; border: 1px solid black;}
+.red { background-color: red; }
+.green { background-color: green; }
+.blue { background-color: blue; }
+.yellow { background-color: yellow; }
+
+/* ----------------------------------- */
+
+
+/* ----------------------------------- */
