--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -4,7 +4,105 @@ dark blue: #06365f
 light blue: #1c5380
 */
 
+* {
+  margin: 0;
+  padding: 0;
+  /* box-sizing: border-box; */
+}
+
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  padding: 100px;
+  background: url(../images/bgtile.png);
+  background-repeat: repeat-x;
+}
+
+h2 {
+  color: #06365f;
+  line-height: 2rem;
+}
+
+span {
+  font-weight: bold;
+}
+
+.container {
+  display: flex;
+  justify-content: space-around;
+}
+
+.container2 {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  padding-top: 20px;
+  padding-bottom: 17px;
+}
+
+.login {
+  display: flex;
+  background-image: linear-gradient(#06365f, #1c5380);
+  padding: 10px;
+  border-color: #06365f;
+  border-width: 1px;
+  border-radius: 10%;
+  margin-left: 85px;
+}
+
+.login p {
+  padding-top: 2px;
+  padding-left: 5px;
+  background-image: linear-gradient(#06365f, #1c5380);
+  color: white;
+  border: none;
+  font-size: 15px;
+  font-weight: 500;
+}
+
+.container3 {
+  display: flex;
+  flex-direction: column;
+  padding: 30px;
+  background-image: url(../images/frame.png);
+  background-repeat: no-repeat;
+}
+
+.container3 div {
+  font-size: 1.1rem;
+  padding-top: 15px;
+}
+
+.apps {
+  display: flex;
+  justify-content: left;
+  margin-left: 30px;
+}
+
+#android {
+  margin-left: 23px;
+}
+
+.footer {
+  display: flex;
+  justify-content: center;
+  list-style: none;
+  font-size: 0.875rem;
+  margin: 90px 0 0 0;
+  font-weight: 700;
+  color: #1c5380;
+}
+
+.footer li {
+  padding: 0 10px;
+}
+
+.footer a {
+  text-decoration: none;
+  color: inherit;
+  text-transform: uppercase;
+}
+
+#grey {
+  color: #d3d3d3;
 }
