--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -7,4 +7,83 @@ light blue: #1c5380
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  height: 850px;
+
+}
+
+.fundoazul{
+  background-color:#1c5380 ;
+  height: 362px;
+  position: relative;
+}
+
+.container{
+  display: flex;
+	flex-direction: row;
+	flex-wrap: nowrap;
+	justify-content: center;
+	align-items: stretch;
+  align-content: stretch;
+  padding-top: 100px;
+
+
+}
+.celular {
+  display: flex;
+  flex-direction: row;
+	flex-wrap: nowrap;
+	justify-content: center;
+	align-items: center;
+  align-content: stretch;
+  margin-right: 20px;
+
+}
+
+.text {
+  display: flex;
+	flex-direction: column;
+	flex-wrap: nowrap;
+  align-content: stretch;
+  margin-bottom: 0px;
+  margin-left: 20px;
+  justify-content: center;
+  align-items: flex-start;
+}
+
+.content {
+  margin-left: -452px;
+  margin-top: 153px;
+  width: 400px;
+  padding-top: 50px
+}
+
+h1 {
+  color: #06365f;
+}
+
+.icon {
+  display: flex;
+	flex-direction: row;
+	flex-wrap: nowrap;
+	justify-content: space-around;
+	align-items: flex-end;
+	align-content: stretch;
+}
+
+ul {
+  list-style: none;
+  display: flex;
+	flex-direction: row;
+	flex-wrap: nowrap;
+	justify-content: space-evenly;
+	align-items: flex-end;
+  align-content: stretch;
+  width: 60%;
+  margin: 5% 18%;
+}
+
+a {
+  color:#1c5380 ;
+  text-decoration:none;
+  font-style: bold;
 }
