--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -8,3 +8,34 @@ body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
 }
+
+#fundo {
+  background-image: url("../images/bgtile.png");
+  background-repeat: repeat;
+  height: 18em;
+}
+
+#frente{
+  position: relative;
+  top: -200px;
+  display: flex;
+  justify-content: flex-start;
+  align-items: stretch;
+}
+
+header{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+#home{
+  background-color: #1c5380;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+}
+
+#tudo{
+
+}
