--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -1,10 +1,126 @@
-/*
-Colors to use:
-dark blue: #06365f
-light blue: #1c5380
-*/
+
+
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
 
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
 }
+
+.azul {
+  background-image: url(/images/bgtile.png);
+  background: linear-gradient(#2f6c9e  50%, #084377);  
+  height: 350px; 
+  
+}
+.main2 {
+  display: flex;
+  margin-top: -200px;
+
+}
+
+.logo {
+  display: flex;
+  justify-content: flex-end;
+  align-items: flex-start;
+
+}
+
+.buttom {
+  display: flex;
+  height: 45px;
+  width: 100px;
+  border: 1px solid #06365f;
+  border-radius: 4px;
+  padding: 10px;
+  margin-left: 80px;
+  margin-top: 10px;
+  box-shadow: 2px 2px #06365f;
+  background-image: url(/images/bgtile.png);
+  background: linear-gradient(#2f6c9e 80%, #084377);  
+}
+.buttom p {
+  color: whitesmoke;
+  font-weight: 700;
+  margin-left: 5px;
+  font-size: 15px;
+  text-align: center;
+}
+
+.iphone {
+  display: flex;
+  position: relative;
+  margin-left: 200px; 
+}
+
+.iphone img {
+  width: 350px;
+}
+.main3 {
+  display: flex;
+  flex-direction: column;
+  margin-left: 180px;
+}
+
+.content {
+  background-image: url(/images/frame.png);
+  width: 500px;
+  height: 500px;
+  background-repeat: no-repeat;
+  margin-top: 30px;
+}
+
+.content h2 {
+  color:#06365f;
+  font-size: 25px;
+  margin: 30px 40px -10px 40px;
+  width: 300px;
+}
+
+.content p {
+  font-size: 18px;
+  margin: 20px 40px;
+  color: rgb(83, 82, 82);
+}
+
+.dowload {
+  display: flex;
+  justify-content: center;
+}
+
+.apple {
+  display: flex;
+  display: inline-block;
+  margin: 20px 30px 20px 40px;
+}
+
+.android {
+  display: flex;
+  display: inline-block;
+}
+
+.footer {
+  display: flex;
+  justify-content: center;
+  margin: 70px 0;
+}
+
+.footer-nav ul li {
+  display: inline-block;
+  margin-left: 10px;
+  list-style: none;
+  text-transform: uppercase;
+  color: #06365f;
+  font-weight: bold;
+}
+
+.footer span {
+  margin-left: 40px;
+  color: rgb(151, 149, 149);
+  font-weight: bold;
+}
+
