--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -15,27 +15,68 @@ body {
   height: 18em;
 }
 
-#frente{
+#frente {
   position: relative;
   top: -200px;
   display: flex;
   justify-content: flex-start;
   align-items: stretch;
+  padding: 0 1em;
 }
 
 header{
   display: flex;
   justify-content: space-between;
   align-items: center;
+  color: white;
 }
 
 #home{
   background-color: #1c5380;
+  border-radius: 5%;
   display: flex;
-  justify-content: flex-end;
+  justify-content: space-between;
   align-items: center;
+  text-align: right;
 }
 
-#tudo{
+#login{
+  position: relative;
+  left: -20px;
+}
 
+#texto{
+  width: 500px;
+  color: #06365f;
+  background-image: url("../images/frame.png");
+  background-size: cover;
+  padding: 1em 2em;
+
+}
+
+#badges{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+
+}
+
+footer{
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  color : 06365f;
+
+}
+
+#menuRodape{
+  color: #1c5380;
+  width: 400px;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+
+}
+#menuRodape p{
+  color: lightgray
 }
