--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -4,7 +4,220 @@ dark blue: #06365f
 light blue: #1c5380
 */
 
-body {
-  font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
+* {
+  padding: 0;
   margin: 0;
+  box-sizing: border-box;
+}
+
+html {
+  font-size: 10px;
+}
+
+body {
+  font: 400 1.6rem/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
+  margin: 0;
+}
+
+.colored-background {
+  display: flex;
+  background: url('../images/bgtile.png') repeat left top;
+  width: 100%;
+  height: 280px;
+}
+
+.content {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: -175px 0px 45px;
+}
+
+.description {
+  width: 35%;
+  margin-left: 70px;
+}
+
+.header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.header > figure > img {
+  width: 105%;
+  margin-bottom: 10px;
+}
+
+.login {
+  width: 100px;
+  height: 42px;
+  border: 1px solid #06365f;
+  border-radius: 3px;
+  background-image: linear-gradient(#5790be, #3c6c92);
+  text-decoration: none;
+  color: white;
+  font-size: 1.5rem;
+  font-weight: 600;
+  margin-bottom: 20px;
+  transform: translateX(-10px);
+  /* margin-left: -50px; */
+}
+
+.login img {
+  width: 30%;
+}
+
+.login div {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  /* flex-direction: row; */
+  justify-content: space-around;
+  align-items: center;
+  padding: 5px 10px;
+}
+
+.text {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  padding: 35px 50px 30px;
+  /*border: 1px solid red; */
+}
+
+.text h1 {
+  color: #06365f;
+  width: 58%;
+  line-height: 35px;
+  margin-bottom: 20px;
+  font-size: 2.5rem;
+}
+
+.text p {
+  padding: 5px 0px;
+}
+
+.text span {
+  font-weight: bolder;
+}
+
+.text-background {
+  background-image: url('../images/frame.png');
+  background-size: 100%;
+  background-repeat: no-repeat;
+}
+
+.main-width {
+  width: 550px;
+}
+
+.download-links {
+  display: flex;
+  justify-content: flex-start;
+  padding: 0px 50px;
+}
+
+.download-links img {
+  padding: 0px 20px 0px 0px;
+  width: 100%;
+}
+
+.uppercase {
+  text-transform: uppercase;
+}
+
+.navigation a {
+  text-decoration: none;
+  color: #1c5380;
+  font-size: 1.2rem;
+  font-weight: 600;
+}
+
+.navigation ul {
+  display: flex;
+}
+
+.navigation li {
+  list-style: none;
+  padding: 0px 10px;
+}
+
+.nav-bar {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 0px 10px 50px 10px;
+}
+
+.copyright {
+  font-size: 1.2rem;
+  font-weight: 500;
+  color: darkgray;
+  margin-left: 20px;
+}
+
+#iphones {
+  width: 100%;
+}
+
+/* TESTING RESPONSIVITY  */
+
+@media (max-width: 1000px) {
+  html {
+    font-size: 8px;
+  }
+
+  .nav-bar {
+    flex-wrap: wrap;
+  }
+
+  .download-links {
+    flex-wrap: wrap;
+  }
+
+  .download-links img {
+    width: 70%;
+  }
+
+  .text-background {
+    background-size: 100%;
+  }
+
+  .content {
+    justify-content: space-around;
+  }
+
+  .content figure {
+    width: 100%;
+  }
+
+  .text {
+    width: 100%;
+  }
+
+  #iphones {
+    width: 70%;
+  }
+
+  .description {
+    margin-left: 10px;
+  }
+
+  .header {
+    justify-content: flex-start;
+  }
+
+  .header > figure > img {
+    width: 80%;
+  }
+
+  .main-width {
+    width: 300px;
+  }
+
+  .login {
+    font-size: 1.2rem;
+    width: 80px;
+  }
 }
