--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -12,7 +12,7 @@ body {
 }
 
 .fundoazul{
-  background-color:#1c5380 ;
+  background-color: #1c5380; ;
   height: 362px;
   position: relative;
 }
@@ -87,3 +87,29 @@ a {
   text-decoration:none;
   font-style: bold;
 }
+
+.login {
+  display: flex;
+	flex-direction: row;
+	flex-wrap: nowrap;
+	justify-content: flex-end;
+	align-items: flex-start;
+	align-content: stretch;
+}
+
+button {
+  margin-left: 20px;
+  background-color: #1c5380;
+  border-color: #06365f ;
+  font-size: large;
+}
+
+.logoebutton {
+  display: flex;
+	flex-direction: row;
+	flex-wrap: nowrap;
+	justify-content: space-around;
+  align-content: stretch;
+  align-items: center;
+}
+
