--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -8,3 +8,86 @@ body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
 }
+
+.instagram {
+  background-image: url(/home/joyce/Documentos/lab-css-instagram-clone/starter-code/images/bgtile.png);
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  background-repeat: repeat-x;
+}
+
+.front {
+  margin-top: 100px;
+}
+
+.insta-log-in {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 20px;
+  margin-top: 20px; 
+}
+
+.log-in {
+  color: white;
+  background-color: #1c5380;
+  background-image: url(/home/joyce/Documentos/lab-css-instagram-clone/starter-code/images/home.png);
+  background-repeat: no-repeat;
+  padding: 5px 10px 5px 30px;
+  margin-left: 20px;
+  border: 2px solid #06365f;
+  margin-right: 60px;
+ }
+.phones {
+  margin-right: 50px;
+}
+
+.capture {
+  background-image: url(/home/joyce/Documentos/lab-css-instagram-clone/starter-code/images/frame.png);
+  width: 450px;  
+  height: 400px;
+  background-repeat: no-repeat;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  padding: 20px 35px;
+  margin-right: 20px;
+}
+
+h1{
+  font-size: 20px;
+  color: #06365f;
+  margin-bottom: -20px;
+}
+
+p {
+  font-size: 15px;
+  margin-top: 30px;
+  margin-bottom: -15px;
+}
+
+.badge {
+  margin-top: 50px;
+}
+
+nav ul {
+    list-style: none;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+li {
+    text-decoration: none;
+    color: #1c5380;
+    margin-right: 30px;
+    font-size: 13px;
+    text-transform: uppercase;
+    
+}
+
+.cinza {
+  color: gray;
+}
