--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -75,13 +75,9 @@ body {
 .login button { 
   width: 85px;  
   height: 35px;
-  background-color: #4c7da7;
-  background-image: url(../images/home.png);
-  background-repeat: no-repeat;
+  background-image: url("../images/home.png"),linear-gradient(#497195, #6389a9);
+  background-repeat: no-repeat; 
   background-position: left;
-  background-size: 20px;
-  background-position-x: 4px;
-  background-position-y: 6px; 
   display: flex;
   align-items: center;
   justify-content: center;
@@ -90,6 +86,9 @@ body {
   border-color: #2e5e88;
   color: white;
   font-weight: 600;
+  border: solid 1px #3e688d;
+  cursor: pointer;
+  outline: none;
 }
 
 .info {
