--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -1,10 +1,55 @@
+body {
+  font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
+}
+
+.color {
+  background-color: #6F7EDD;
+  width: 100%;
+  height: 350px;
+  display: inline-flex;
+  position: relative;
+  
+}
+.container {
+  width: 80%;
+  height: 100%;
+  position: absolute;
+  margin-left: 50%;
+  transform: translate(-50%,-0%);
+}
+
+.phone {
+  width: 70%;
+  margin-right: 15%;
+  margin-left: 15% ;
+}
+
+.frame {
+  width: 90%;
+  margin: 5%;
+}
+
+.caja1 {
+  width: 40%;
+  margin: 2px;
+  
+}
+
+.caja2 {
+  width: 60%;
+  margin: 2px;
+}
+
+.sectionMain{
+  padding-top: 100px;
+  width: 100%;
+  display: inline-flex;
+  position: relative;
+  
+}
+
 /*
 Colors to use:
 dark blue: #06365f
 light blue: #1c5380
 */
-
-body {
-  font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
-  margin: 0;
-}
