--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -5,7 +5,7 @@ body {
 .color {
   background-color: #6F7EDD;
   width: 100%;
-  height: 350px;
+  height: 300px;
   display: inline-flex;
   position: relative;
   
@@ -24,15 +24,24 @@ body {
   margin-left: 15% ;
 }
 
-.frame {
+.sectionFrame {
   width: 90%;
-  margin: 5%;
+  margin: 2% 5% 5% 5%;
+}
+
+.frame {
+  background: url('/home/alejandro/Desktop/IronHack/module1/html-css/lab-css-instagram-clone/starter-code/images/frame.png');
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.frame > h4, .frame > p { 
+  padding: 20px 0px 0px 2 0px;
 }
 
 .caja1 {
   width: 40%;
   margin: 2px;
-  
 }
 
 .caja2 {
@@ -40,16 +49,51 @@ body {
   margin: 2px;
 }
 
+.spotify-logo {
+  width: 80%;
+  margin-right: 20%;
+}
+
+.caja2 > div {
+  width: 90%;
+  margin: 2% 5% 0% 5%;
+  display: inline-flex;
+  position: relative;
+}
+
+button {
+  background-color: #6F7EDD;;
+  border: 1px solid black;
+  color: white;
+  border-radius: 4px;
+  padding: 12px 16px;
+  font-size: 16px;
+}
+
 .sectionMain{
   padding-top: 100px;
   width: 100%;
   display: inline-flex;
   position: relative;
-  
 }
 
-/*
-Colors to use:
-dark blue: #06365f
-light blue: #1c5380
-*/
+nav {
+  text-align: center;
+} 
+
+ul{
+  display: inline-flex;
+  padding-top: 70px;
+} 
+
+li {
+  text-transform: uppercase;
+  font-weight: 900;
+  font-size: 14px;
+  color: darkgray;
+} 
+
+li:not(:last-child) {
+  color: #1c5380;
+  margin-right: 15px;
+}
