--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -7,4 +7,87 @@ light blue: #1c5380
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  height: 100vh;
+  background: linear-gradient(to bottom, rgba(6,53,95,1) 0%, rgba(28,83,128,1) 36%, rgba(255,255,255,1) 36%, rgba(255,255,255,1) 71%, rgba(255,255,255,1) 100%);
 }
+
+.container{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 85vh;
+}
+
+.container .phones {
+  flex-basis: 20%;
+}
+
+.container .text-content{
+  flex-basis: 40%;
+  padding: 25px;
+}
+
+.log-in-button{
+  float: right;
+  margin: 20px;
+  padding-right: 10px;
+  padding-left:10px;
+  padding-top: 5px;
+  padding-bottom: 5px;
+  text-decoration: none;
+  color: white;
+  font-size: 14px;
+  font-weight: bold;
+  display: flex;
+  box-shadow: 0px 1px 3px 1px #1c5380;
+  background: linear-gradient(to bottom, rgba(44,109,163,1) 0%, rgba(28,83,128,1) 41%, rgba(6,53,95,1) 100%);
+}
+
+.img-button{
+  padding-top: 5px;
+  padding-right: 8px;
+}
+
+.text-log-in{
+  margin: 5px;
+}
+
+.container-box {
+  position: relative;
+  margin-top: 30px;
+}
+
+.content-box{
+  position: absolute;
+  top: 10px;
+  right: 90px;
+  left: 40px;
+  bottom: 10px;
+}
+
+.images-apple-android{
+  padding-top: 45px;
+  padding-left: 40px;
+}
+
+.footer-list{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  list-style: none;
+}
+
+.footer-list li {
+  padding-right: 15px;
+}
+
+.footer-list li a{
+  text-decoration: none;
+  color:#1c5380;
+  font-weight: bold;
+  text-transform: uppercase;
+  font-size: 12px;
+}
+
+
+
