--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -9,16 +9,30 @@ body {
   margin: 0;
   background-color: aqua;
 }
+.content{
+  border: 2px solid; /*acordardse de quitarlo*/
+}
 .bgroundblue{
   background-color: #1c5380;
-  height: 350px;
+  height: 400px;
+  position: relative;
+}
+#logo-instagram{
+  margin-left: 40%;
+  margin-top: 200px;
+  margin-right: 100px;
 }
 #login{
   border: 3px solid #06365f;
   background-color: #1c5380;
   color: white;
-  font-size: 16px;
-  float: right;
-  margin-top: 30%;
-  margin-right: 15%; /*importante recordar para luego poner la section al mismo nivel*/
+  font-size: 24px;  
 }
+.bgwhite{
+  height: 800px;
+  background-color: white; /*esto tiene que ir en otra clase*/
+}
+#insta-working{
+  position: static;
+}
+
