--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -1,10 +1,47 @@
+body {
+  font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
+  margin: 0;
+}
+
+.header {
+  display: flex;
+  flex-flow: inherit;
+  justify-content: space-between;
+  background-color: #1c5380
+}
+
+.log-in {
+  background-color: #1c5380;
+  margin: 20px;
+
+}
+
+.log-in a img{
+  justify-content: space-between;
+  text-align: left;
+  margin-inline: 20px;
+}
+
+.section {
+  display: flex;
+  justify-content: space-between;
+  flex-flow: column wrap;
+  background-color: white;
+}
+
+.footer {
+  display: flex;
+  justify-content: space-around;
+  flex-flow: row wrap;
+
+}
+
+
+
+
+
 /*
 Colors to use:
 dark blue: #06365f
 light blue: #1c5380
 */
-
-body {
-  font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
-  margin: 0;
-}
